--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
       "g-i-s": "^2.1.7",
       "got": "11",
       "html-entities": "^2.5.2",
+      "json-stable-stringify": "^1.3.0",
       "node-cron": "^3.0.0",
       "node-gtts": "^2.0.2",
       "qrcode": "1.5.0",
